--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 
     <section id="about" class="about container">
       <h2>About The Podcast</h2>
-      <p>
-        TechWave provides deep dives into technology trends that matter. From
-        software engineering to digital marketing, we bring you insights from
-        the world's most innovative minds.
+      <p class="about-text">
+        TechWave provides deep dives into technology trends that matter. <br />
+        From software engineering to digital marketing, <br />
+        we bring you insights from the world's most innovative minds.
       </p>
 
       <div class="stats">
@@ -117,27 +117,38 @@
     <section class="features container">
       <h2 class="section-title">Why Choose TechWave</h2>
       <div class="features-grid">
-        <div class="feature-card">
-          <i class="fas fa-headphones icon-gradient"></i>
+        <div class="feature-card audio">
+          <div>
+            <img class="choose-icon" src="assets/headphone.png" alt="" />
+          </div>
           <h4>Premium Audio Quality</h4>
           <p>
-            Experience crystal clear sound with high-definition recording
-            technology.
+            Premium audio quality generally refers to High-Resolution (Hi-Res)
+            or Lossless audio that captures more detail, nuance, and dynamic
+            range than standard CD quality (16-bit/44.1 kHz) or standard MP3s.
+            It is characterized by higher bitrates It is characterized by higher
+            bitrates (often 256–320 kbps for high-quality lossy) or, for true
+            audiophiles, lossless formats (FLAC/ALAC) that can exceed 1000 kbps,
+            providing a studio-level, immersive listening experience
           </p>
         </div>
-        <div class="feature-card">
-          <i class="fas fa-mobile-alt icon-gradient"></i>
+        <div class="feature-card expert">
+          <div>
+            <img class="choose-icon" src="assets/device.png" alt="" />
+          </div>
           <h4>Mobile Friendly</h4>
           <p>
             Listen on the go with seamless mobile apps and offline downloads.
           </p>
         </div>
-        <div class="feature-card">
-          <i class="fas fa-globe icon-gradient"></i>
+        <div class="feature-card expert">
+          <div>
+            <img class="choose-icon" src="assets/location.png" alt="" />
+          </div>
           <h4>Global Community</h4>
           <p>Connect with tech enthusiasts from over 100 countries.</p>
         </div>
-        <div class="feature-card">
+        <div class="feature-card expert">
           <i class="fas fa-bolt icon-gradient"></i>
           <h4>Expert Interviews</h4>
           <p>
