about section added

--- a/index.html
+++ b/index.html
@@ -149,14 +149,20 @@
           <p>Connect with tech enthusiasts from over 100 countries.</p>
         </div>
         <div class="feature-card expert">
-          <i class="fas fa-bolt icon-gradient"></i>
+          <i class="fas fa-bolt icon-gradient unique"></i>
           <h4>Expert Interviews</h4>
           <p>
-            Get insights from top engineers and tech entrepreneurs worldwide.
+            Expert interviews are qualitative research conversations with
+            subject matter specialists to gain deep, practical insights,
+            validate assumptions, and understand complex topics beyond public
+            data, using structured or semi-structured methods like calls, video,
+            or in-person meetings to gather firsthand knowledge for strategic
           </p>
         </div>
         <div class="feature-card wide">
-          <i class="fas fa-book-open icon-gradient"></i>
+          <div>
+            <img class="choose-icon" src="assets/resource.png" alt="" />
+          </div>
           <h4>Rich Resources</h4>
           <p>
             Access show notes, transcripts, and additional materials for every
@@ -171,15 +177,102 @@
       <div class="episodes-grid">
         <div class="episode-card">
           <div class="card-image">
-            <img
-              src="https://images.unsplash.com/photo-1589903308914-27d046c3d55d?q=80&w=500"
-              alt="AI episode"
-            />
-            <div class="play-btn"><i class="fas fa-play"></i></div>
+            <div>
+              <iframe
+                width="560"
+                height="215"
+                src="https://www.youtube.com/embed/2f5NHArhhQ0?si=Su3z-TfPUcFPXNgz"
+                title="YouTube video player"
+                frameborder="0"
+                allow="
+                  accelerometer;
+                  autoplay;
+                  clipboard-write;
+                  encrypted-media;
+                  gyroscope;
+                  picture-in-picture;
+                  web-share;
+                "
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
           <div class="card-content">
             <h4>The Future of AI in Everyday Life</h4>
-            <p>Discussing how AI is transforming our daily routines.</p>
+            <p>
+              Discussing how AI is transforming our daily routines. AI is
+              working behind the scenes to make your day easier, more efficient,
+              and deeply connected.
+            </p>
+            <span class="duration"><i class="fas fa-clock"></i> 45 Min</span>
+          </div>
+        </div>
+        <div class="episode-card">
+          <div class="card-image">
+            <div>
+              <iframe
+                width="560"
+                height="215"
+                src="https://www.youtube.com/embed/RmkOk8wml9s?si=DS4MZ59W3Y5ciRO4"
+                title="YouTube video player"
+                frameborder="0"
+                allow="
+                  accelerometer;
+                  autoplay;
+                  clipboard-write;
+                  encrypted-media;
+                  gyroscope;
+                  picture-in-picture;
+                  web-share;
+                "
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+          <div class="card-content">
+            <h4>The Future of AI in Everyday Life</h4>
+            <p>
+              Building better habits for remote work requires replacing the
+              structural cues of an office (commutes, designated desks, fixed
+              hours) with intentional routines that create separation between
+              personal life and work
+            </p>
+            <span class="duration"><i class="fas fa-clock"></i> 45 Min</span>
+          </div>
+        </div>
+        <div class="episode-card">
+          <div class="card-image">
+            <div>
+              <iframe
+                width="560"
+                height="215"
+                src="https://www.youtube.com/embed/sc_3ObVvG5k?si=EBXRrGtjbPajuVRB"
+                title="YouTube video player"
+                frameborder="0"
+                allow="
+                  accelerometer;
+                  autoplay;
+                  clipboard-write;
+                  encrypted-media;
+                  gyroscope;
+                  picture-in-picture;
+                  web-share;
+                "
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+          <div class="card-content">
+            <h4>The Future of AI in Everyday Life</h4>
+            <p>
+              A tech career roadmap involves building a strong foundation,
+              developing T-shaped skills (deep expertise + broad knowledge),
+              mastering soft skills (communication, leadership), choosing a path
+              (IC or management),
+            </p>
             <span class="duration"><i class="fas fa-clock"></i> 45 Min</span>
           </div>
         </div>
@@ -190,35 +283,50 @@
       <h2 class="section-title">Meet The Host</h2>
       <div class="host-card">
         <div class="host-img">
-          <img
-            src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=300"
-            alt="Alex Kumar"
-          />
+          <img src="assets/host.png" />
         </div>
         <div class="host-info">
           <h3>Alex Kumar</h3>
           <p>
-            Alex is a seasoned tech journalist with 15+ years of experience in
-            the tech industry.
+            Innovative entrepreneurs are people who constantly have new ideas
+            and inventions that they turn into business ventures. Their aim is
+            to change the way people live for the better, making their products
+            and services stand out from the rest on the market.
           </p>
           <div class="social-icons">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
+            <div class="host-icon">
+              <img src="assets/linkedin.png" alt="" />
+            </div>
+            <div class="host-icon"><img src="assets/x.png" alt="" /></div>
+            <div class="host-icon">
+              <img src="assets/instagram.png" alt="" />
+            </div>
+            <div class="host-icon"><img src="assets/youtube.png" alt="" /></div>
           </div>
         </div>
       </div>
     </section>
-
     <footer class="footer">
       <div class="container footer-content">
         <div class="footer-logo">Tech<span>Wave</span></div>
         <div class="footer-platforms">
-          <span>Spotify</span>
-          <span>Apple Podcasts</span>
-          <span>YouTube</span>
+          <div class="flex-footer">
+            <div><img src="assets/spotify.png" alt="" /></div>
+            <div>Spotify</div>
+          </div>
+          <div class="flex-footer">
+            <div><img src="assets/apple-podcast.png" alt="" /></div>
+            <div>Apple Podcasts</div>
+          </div>
+          <div class="flex-footer">
+            <div><img src="assets/youtube-podcast.png" alt="" /></div>
+            <div>YouTube</div>
+          </div>
+          <div class="flex-footer">
+            <div><img src="assets/twitter.png" alt="" /></div>
+            <div>Twitter</div>
+          </div>
         </div>
-        <hr class="footer-divider" />
         <p class="copyright">© 2026 TechWave Podcast. All rights reserved.</p>
       </div>
     </footer>
