--- a/index.html
+++ b/index.html
@@ -30,33 +30,6 @@
       </nav>
     </header>
 
-    <!-- <section class="hero">
-      <div class="container">
-        <div class="banner">
-          <div class="hero-logo-container">
-            <div class="wave-bg"></div>
-            <div class="main-logo-circle">
-              <img src="assets/hero-circle.png" alt="" />
-              <i class="fas fa-microphone"></i>
-              <span class="badge">New!</span>
-            </div>
-          </div>
-          <h1>TechWave</h1>
-          <p class="subtitle">
-            Tech wave is a global IT services and solutions partner
-            <br />dedicated to solving unique business
-          </p>
-          <div class="hero-btns">
-            <button class="btn-subscribe-top desktop-btn">
-              <i class="fab fa-spotify"></i> Listen On Spotify
-            </button>
-            <button class="btn-outline">
-              <i class="fa-regular fa-envelope"></i> Subscribe
-            </button>
-          </div>
-        </div>
-      </div>
-    </section> -->
     <section class="banner">
       <div class="banner-content">
         <div class="mic-wrapper">
@@ -70,7 +43,7 @@
         </div>
 
         <h1>TechWave</h1>
-        <p>
+        <p class="pragraph">
           Your daily dose of tech insights, productivity hacks, and personal
           growth
         </p>
@@ -88,7 +61,7 @@
 
     <section id="about" class="about container">
       <h2>About The Podcast</h2>
-      <p class="about-text">
+      <p class="about-text pragraph">
         TechWave provides deep dives into technology trends that matter. <br />
         From software engineering to digital marketing, <br />
         we bring you insights from the world's most innovative minds.
@@ -122,7 +95,7 @@
             <img class="choose-icon" src="assets/headphone.png" alt="" />
           </div>
           <h4>Premium Audio Quality</h4>
-          <p>
+          <p class="pragraph">
             Premium audio quality generally refers to High-Resolution (Hi-Res)
             or Lossless audio that captures more detail, nuance, and dynamic
             range than standard CD quality (16-bit/44.1 kHz) or standard MP3s.
@@ -137,7 +110,7 @@
             <img class="choose-icon" src="assets/device.png" alt="" />
           </div>
           <h4>Mobile Friendly</h4>
-          <p>
+          <p class="pragraph">
             Listen on the go with seamless mobile apps and offline downloads.
           </p>
         </div>
@@ -146,12 +119,14 @@
             <img class="choose-icon" src="assets/location.png" alt="" />
           </div>
           <h4>Global Community</h4>
-          <p>Connect with tech enthusiasts from over 100 countries.</p>
+          <p class="pragraph">
+            Connect with tech enthusiasts from over 100 countries.
+          </p>
         </div>
         <div class="feature-card expert">
           <i class="fas fa-bolt icon-gradient unique"></i>
           <h4>Expert Interviews</h4>
-          <p>
+          <p class="pragraph">
             Expert interviews are qualitative research conversations with
             subject matter specialists to gain deep, practical insights,
             validate assumptions, and understand complex topics beyond public
@@ -164,7 +139,7 @@
             <img class="choose-icon" src="assets/resource.png" alt="" />
           </div>
           <h4>Rich Resources</h4>
-          <p>
+          <p class="pragraph">
             Access show notes, transcripts, and additional materials for every
             episode.
           </p>
@@ -200,7 +175,7 @@
           </div>
           <div class="card-content">
             <h4>The Future of AI in Everyday Life</h4>
-            <p>
+            <p class="pragraph">
               Discussing how AI is transforming our daily routines. AI is
               working behind the scenes to make your day easier, more efficient,
               and deeply connected.
@@ -233,7 +208,7 @@
           </div>
           <div class="card-content">
             <h4>The Future of AI in Everyday Life</h4>
-            <p>
+            <p class="pragraph">
               Building better habits for remote work requires replacing the
               structural cues of an office (commutes, designated desks, fixed
               hours) with intentional routines that create separation between
@@ -267,7 +242,7 @@
           </div>
           <div class="card-content">
             <h4>The Future of AI in Everyday Life</h4>
-            <p>
+            <p class="pragraph">
               A tech career roadmap involves building a strong foundation,
               developing T-shaped skills (deep expertise + broad knowledge),
               mastering soft skills (communication, leadership), choosing a path
@@ -287,7 +262,7 @@
         </div>
         <div class="host-info">
           <h3>Alex Kumar</h3>
-          <p>
+          <p class="pragraph">
             Innovative entrepreneurs are people who constantly have new ideas
             and inventions that they turn into business ventures. Their aim is
             to change the way people live for the better, making their products
